# Vacancy-parcer-from-hh.ru-superjob.ru

./: hh_ru.json  main.py  pyproject.toml  sj_ru.json
classes/: Connector.py  engine_classes.py  hh_ru.json  jobs_classes.py  sj_ru.json
